--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BD3</string>
+    <string name="app_name">Bedrijvendagen</string>
     <string name="tvUsername">Username</string>
     <string name="tvPassword">Password</string>
     <string name="bLogim">Log in</string>
