--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="secondErrorMessage">Unfortunately we were unable to upload your data to the server. We are going to save your data locally and upload it at a later time.\\n\\nPlease also take a note yourself with old fashioned pen and paper, to make sure you definitely have this record saved!\\n\\nSorry for the inconvenience!\\n\\nNote; if this error occurs often, please notify the board of the Bedrijvendagen.</string>
     <string name="Footer">Bedrijvendagen Twente</string>
     <string name="second_error_message">Unfortunately we were unable to upload your data to the server. We are going to save your data locally and upload it at a later time.\\n\\nPlease also take a note yourself with old fashioned pen and paper, to make sure you definitely have this record saved!\\n\\nSorry for the inconvenience!\\n\\nNote; if this error occurs often, please notify the board of the Bedrijvendagen.</string>
+    <string name="title_activity_standard_comment">StandardCommentActivity</string>
 </resources>
